REGRESSION(304354@main) GLIB build failure without assertions due to wrong WARN_UNUSED_RETURN https://bugs.webkit.org/show_bug.cgi?id=304063

Reviewed by Xabier Rodriguez-Calvar.

Update the macro position, like 304354@main did.

* Source/WTF/wtf/glib/GMallocString.h:

Canonical link: https://commits.webkit.org/304358@main